--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4,7 +4,10 @@ en:
       title: Multiple Dropdown
     content:
       title: Content
+    tabs:
+      title: Tabs
 
     composer:
       insert_dropdowns: "Option content..."
       insert_content: "Content..."
+      insert_tabs: "Tab..."
